@@ -1,4 +1,4 @@
+-Xms512m
 -Xmx2g
--XX:+UseG1GC
--XX:+TieredCompilation
--XX:TieredStopAtLevel=1
+-XX:+UseZGC
+--enable-preview
